Fixed mapping to the gapminder data for the country bubbles.

--- a/Visualizing the World Through its Own Worldview/CSS/MyCSS.css
+++ b/Visualizing the World Through its Own Worldview/CSS/MyCSS.css
@@ -17,3 +17,7 @@
 .waveContainer{
   margin-bottom: 50px;
 }
+
+.svgText{
+  pointer-events:none
+}
